syntax = "proto3";

package users;

service UsersService {
  rpc CreateUser (NewUserRequest) returns (UserResponse) {}
  rpc Me (UserIdRequest) returns (UserResponse) {}
  rpc GetAllUsers (UsersResponse) returns (UsersResponse) {}
}

message UserIdRequest {
  int32 id = 1;
}

message NewUserRequest {
  string name = 1;
  string password = 2;
  string email = 3;
  string image_url = 4;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string password = 3;
  string email = 4;
  string image_url = 5;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

